--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,21 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<div el-col span="6">
+<div el-row class="tac">
+  <div el-col span="6">
 
-  <h1>Element Angular Demo</h1>
+    <h1>Element Angular Demo</h1>
 
-  <el-menu>
+    <el-menu>
 
-    <el-submenu  *ngFor="let menu of menus; let menuIndex = index" index={{menuIndex}} title={{menu.title}}>
-      <el-menu-item *ngFor="let item of menu.subMenus; let subIndex = index" index="{{menuIndex}}-{{subIndex}}">{{item}}</el-menu-item>
-    </el-submenu>
+      <el-submenu  *ngFor="let menu of menus; let menuIndex = index" index={{menuIndex}} title={{menu.title}}>
+        <el-menu-item *ngFor="let item of menu.subMenus; let subIndex = index" index="{{menuIndex}}-{{subIndex}}">
+          <a routerLink={{item.url}}>{{item.title}}</a>
+        </el-menu-item>
+      </el-submenu>
 
-  </el-menu>
+    </el-menu>
 
+  </div>
+
+  <router-outlet></router-outlet>
 </div>
